--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="css/import.css">
 </head>
-<body>
-    모야 이거마자?
+<body class="kokoaBody login">
+    <div class="loginWrap">
+			<h1>Green Talk</h1>
+			<div class="loginInput"><label for="mNum">ID</label><input type="tel" placeholder="Email or phone number" id="mNum" name="mNum" autocomplete="off"></div>
+			<div class="loginInput"><label for="pwd">PW</label><input type="password" placeholder="Password" id="pwd" name="pwd" autocomplete="off"></div>
+		
+			<a href="main.html" class="loginBtn">LOGIN</a>
+
+			<p class="loginInfo">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, numquam.
+			</p>
+		</div>
 </body>
 </html>
