--- a/list.html
+++ b/list.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/aecf283b8b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/import.css">
 </head>
-<body>
+
+<body class="kokoaBody">
+    <div class="top">
+        <h2>Talk</h2>
+        <div>
+            <a href="#"><i class="fa fa-search"></i></a>
+            <a href="#"><i class="fa fa-user"></i></a>
+            <a href="#"><i class="fa fa-music"></i></a>
+        </div>
+    </div>
+    <div class="conWrap">
+        
+        <div class="listWrap">
+            <ul>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>MY NAME</b>
+                        <span>its me !</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     
+    <footer>
+        <a href="main.html"><i class="fa fa-home"></i></a>
+        <a href="list.html" class="active"><i class="fa fa-comment"></i></a>
+        <a href="#"><i class="fa fa-shopping-basket"></i></a>
+        <a href="#"><i class="fa fa-bars"></i></a>
+    </footer>
 </body>
 </html>
