--- a/main.html
+++ b/main.html
@@ -7,7 +7,124 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/import.css">
 </head>
+
 <body class="kokoaBody">
+    <div class="top">
+        <h2>Friends</h2>
+        <div>
+            <a href="#"><i class="fa fa-search"></i></a>
+            <a href="#"><i class="fa fa-user"></i></a>
+            <a href="#"><i class="fa fa-music"></i></a>
+        </div>
+    </div>
+    <div class="conWrap">
+        
+        <div class="listWrap">
+            <em>me</em>
+            <ul>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>MY NAME</b>
+                        <span>its me !</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="listWrap mt-10">
+            <em>ad</em>
+            <ul>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>ad1</b>
+                        <span>shapping</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>ad2</b>
+                        <span>shapping</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="listWrap mt-10">
+            <em>friends</em>
+            <ul>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend1</b>
+                        <span>hi</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend2</b>
+                        <span>22</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend3</b>
+                        <span>Lorem, ipsum.</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend1</b>
+                        <span>hi</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend2</b>
+                        <span>22</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend3</b>
+                        <span>Lorem, ipsum.</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend1</b>
+                        <span>hi</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend2</b>
+                        <span>22</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="talk.html">
+                        <p></p>
+                        <b>friend3</b>
+                        <span>Lorem, ipsum.</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     
+    <footer>
+        <a href="main.html" class="active"><i class="fa fa-home"></i></a>
+        <a href="list.html"><i class="fa fa-comment"></i></a>
+        <a href="#"><i class="fa fa-shopping-basket"></i></a>
+        <a href="#"><i class="fa fa-bars"></i></a>
+    </footer>
 </body>
 </html>
